# wxWidget-experiment

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  simple_build.sh
include/: MyApp.hpp  MyFrame.hpp
src/: MyApp.cpp  MyFrame.cpp
